# PlatformPath

./: CMakeLists.txt  README.md
config/: IPlatformPath_version.h.in  PlatformPathConfig.cmake.in
include/: IPlatformPath.h
include/PlatformPath/: IPlatformPath.h
src/: PlatformPath.cpp
test/: CMakeLists.txt  PlatformPath_test.cpp
